# RBFClanBot

./: .env.defaults  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: keyboards.py  main.py
app/alembic/: env.py
app/alembic/versions/: 00d4ae939070_added_is_banned_column_to_user.py  0e014c6dcb9c_switch_status_to_enum.py  17600b6a1bb7_add_new_application_status.py  2c138e3d91e2_added_statuses.py  6870be35d3f7_removed_status_table.py  8a05d62f7d6a_added_admin_application_relationship.py  95c6400ae2ef_initial_revision.py
app/config/: __init__.py  callbacks.py  states.py
app/core/: config.py
app/db/: __init__.py  engine.py
app/db/repositories/: __init__.py  abstract.py  admin_processing_application.py  application.py  application_answer.py  application_status.py  user.py
app/decorators/: updates.py
app/domain/admin_processing_application/: dto.py  entities.py  exceptions.py
app/domain/application/: dto.py  entities.py  exceptions.py  value_objects.py
app/domain/application_answers/: dto.py  entities.py
app/domain/user/: dto.py  entities.py  exceptions.py
app/handlers/: __init__.py  admins.py  application.py  empty.py  error.py  start.py
app/handlers/admins/: __init__.py  accept.py  ban.py  reject.py  shutdown.py  unban.py
app/handlers/admins/applications/: accept.py  reject.py  take.py
app/handlers/admins/users/: ban.py  unban.py
app/handlers/application/: __init__.py  error_answer.py
app/handlers/application/finish/: user_decision.py
app/handlers/chat/: __init__.py  new_user.py  new_user_joined.py
app/handlers/config/: __init__.py  callbacks.py
app/infra/messaging/: exceptions.py  telegram_api.py
app/models/: __init__.py  admin_processing_applications.py  application_answers.py  application_statuses.py  applications.py  base.py  users.py
app/scripts/: prestart.sh  start.sh
app/services/: application.py  application_service.py  formatting_service.py  link_service.py  message_service.py  sender.py  user_service.py
app/services/applications/: application_admin_accept.py  application_admin_reject.py  application_admin_take.py  application_complete.py  application_formatting.py  application_overview.py  application_response.py  application_retrieve.py  application_revoke_link.py  application_start.py  dto.py  value_objects.py
app/services/users/: dto.py  user_ban.py  user_create.py  user_unban.py
app/utils/: application_format.py
app/validators/: question_validators.py
scripts/: create_backup.sh  restore_backup.sh
tests/: conftest.py  utils.py
tests/environment/: unit_of_work.py
tests/functional/: conftest.py
tests/unit/domain/: test_admin_processing_application.py  test_application_answer.py
(+33 files in other folders)
