[tool.poetry]
name = "rbf-clan-bot"
version = "0.1.0"
description = ""
authors = ["SerHappy <lokhmanovkirill@gmail.com>"]
readme = "README.md"
packages = [{include = "rbf_clan_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.7"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
python-telegram-bot = "^20.7"
flake8-docstrings = "^1.7.0"
flake8-bandit = "^4.1.1"
black = "^24.1.1"
mypy = "^1.8.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
force_alphabetical_sort = true
force_single_line = true
lines_after_imports = 2
line_length = 120

[tool.mypy]
python_version = "3.11"
files = "app/*.py"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true
exclude = []
disallow_untyped_calls = false
disallow_untyped_defs = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
