[tool.poetry]
name = "rbf-clan-bot"
version = "0.1.0"
description = ""
authors = ["SerHappy <lokhmanovkirill@gmail.com>"]
readme = "README.md"
packages = [{ include = "rbf_clan_bot" }]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.7"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.25" }
alembic = "^1.13.1"
python-decouple = "^3.8"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
uvloop = "^0.19.0"


[tool.poetry.group.dev.dependencies]
flake8-docstrings = "^1.7.0"
flake8-bandit = "^4.1.1"
ruff = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
